// https://docs.spring.io/spring-grpc/reference/getting-started.html
syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.example.todokotlin.proto";
option java_outer_classname = "TodoProto";

service TodoService {
    rpc CreateTodo (CreateTodoRequest) returns (CreateTodoResponse) {}
}

message CreateTodoRequest {
    string content = 1;
    string priority = 2;
    optional google.protobuf.Timestamp due_date = 3;
}
message CreateTodoResponse {
    int32 id = 1;
    string content = 2;
    string priority = 3;
    optional google.protobuf.Timestamp due_date = 4;
}
